Add thermo configs and WS gap scans for baseline/wsZ1 plus report zips

--- a/results/thermo_config_spectral_density.json
+++ b/results/thermo_config_spectral_density.json
@@ -5,6 +5,7 @@
   "coupling_density_shape": 0.0,
   "coupling_port_geometry": 0.0,
   "coupling_softness": 0.0,
+  "coupling_ws_Z": 0.0,
   "density_Z_ref": 10.0,
   "density_blend": "linear",
   "density_model": "tf_radius",
@@ -17,6 +18,8 @@
   "ws_R_max": 12.0,
   "ws_R_well": 5.0,
   "ws_V0": 40.0,
+  "ws_Z_alpha": 0.3333333333333333,
+  "ws_Z_ref": 10.0,
   "ws_ell": 0,
   "ws_geom_N_grid": 800,
   "ws_geom_R_max": 25.0,
