--- a/results/thermo_config_spectral_density_wsZ1.json
+++ b/results/thermo_config_spectral_density_wsZ1.json
@@ -1,18 +1,18 @@
 {
   "coupling_complexity": 0.0,
   "coupling_delta_F": 0.0,
-  "coupling_density": 0.0,
+  "coupling_density": 1.0,
   "coupling_density_shape": 0.0,
-  "coupling_port_geometry": 1.0,
+  "coupling_port_geometry": 0.0,
   "coupling_softness": 0.0,
-  "coupling_ws_Z": 0.0,
+  "coupling_ws_Z": 1.0,
   "density_Z_ref": 10.0,
   "density_blend": "linear",
   "density_model": "tf_radius",
   "density_source": "gaussian",
   "experiment_name": "default_thermo",
   "port_geometry_blend": "linear",
-  "port_geometry_source": "ws_sp_gap",
+  "port_geometry_source": "legacy",
   "temperature": 1.0,
   "ws_N_grid": 220,
   "ws_R_max": 12.0,
