HETERO-1A P0.5.3: theta passthrough, collision logs, fp exclude-energy-like default, trial gating metadata

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,10 @@ results/**/cache_*.npz
 results/**/submissions/**
 results/**/__pycache__/
 
+# ============================================================
+# HETERO QC runtime artifacts (never commit)
+# ============================================================
+results/hetero_suite_theta_*/
+results/hetero_calibration/trial_*/
+results/tmp/
+
