Add hetero P0.6 extension: new formulas, strict collisions, CI smoke

--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,7 @@ results/**/__pycache__/
 # HETERO QC runtime artifacts (never commit)
 # ============================================================
 results/hetero_suite_theta_*/
+results/hetero_suite_ci_smoke*/
 results/hetero_calibration/trial_*/
 results/tmp/
 
