--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -18,8 +18,6 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          pip install -r requirements-dev.txt
+          pip install -e ".[dev]"
       - name: Run tests
         run: pytest -q
-
