--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,9 @@ dev = [
 demo = [
   "rdkit-pypi",
 ]
+chem = [
+  "rdkit-pypi",
+]
 
 [project.scripts]
 hetero-audit = "hetero1a.cli:hetero_audit"
@@ -30,5 +33,5 @@ hetero-pipeline = "hetero1a.cli:hetero_pipeline"
 hetero-report = "hetero1a.cli:hetero_report"
 
 [tool.setuptools.packages.find]
-where = ["."]
-include = ["analysis*", "hetero1a*"]
+where = [".", "src"]
+include = ["analysis*", "hetero1a*", "hetero2*"]
