--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ version = "0.2.0"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
-  "numpy",
+  "numpy<2",
   "pandas",
   "matplotlib",
   "scipy",
