--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -89,6 +89,7 @@ jobs:
       - name: Run hetero2 demo inside container
         run: |
           mkdir -p /tmp/hetero2_out
+          chmod -R a+rwx /tmp/hetero2_out
           docker run --rm -v /tmp/hetero2_out:/out hetero2:smoke hetero2-demo-aspirin --out_dir /out/aspirin
           test -f /tmp/hetero2_out/aspirin/aspirin_report.md
           test -d /tmp/hetero2_out/aspirin/aspirin_assets
