--- a/.github/workflows/hetero_smoke.yml
+++ b/.github/workflows/hetero_smoke.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Install deps
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements-dev.txt
+          pip install -e ".[dev]"
       - name: Pytest
         run: python -m pytest -q
       - name: HETERO smoke
