Fix publish_stress_pack input default

--- a/.github/workflows/publish_stress_pack.yml
+++ b/.github/workflows/publish_stress_pack.yml
@@ -37,8 +37,7 @@ on:
       prerelease:
         description: "Mark GitHub release as pre-release"
         required: true
-        type: boolean
-        default: true
+        default: "true"
 
 jobs:
   build-pack:
