--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -90,14 +90,13 @@ jobs:
       - name: Run hetero2 demo inside container
         run: |
           mkdir -p /tmp/hetero2_out
-          chmod -R a+rwx /tmp/hetero2_out
-          docker run --rm -v /tmp/hetero2_out:/out hetero2:smoke hetero2-demo-aspirin --out_dir /out/aspirin
+          docker run --rm --user "$(id -u):$(id -g)" -e HOME=/tmp -v /tmp/hetero2_out:/out hetero2:smoke hetero2-demo-aspirin --out_dir /out/aspirin
           test -f /tmp/hetero2_out/aspirin/aspirin_report.md
           test -d /tmp/hetero2_out/aspirin/aspirin_assets
       - name: Run pilot E2E inside container (zip pack)
         run: |
           mkdir -p /tmp/hetero2_out/pilot
-          docker run --rm -v /tmp/hetero2_out:/out hetero2:smoke /bin/bash -lc "\
+          docker run --rm --user "$(id -u):$(id -g)" -e HOME=/tmp -v /tmp/hetero2_out:/out hetero2:smoke /bin/bash -lc "\
             python scripts/pilot_generate_input.py --out_dir /out/pilot --rows 200 --k_decoys 2 --seed 0 --full_cover_count 3 && \
             hetero2-batch --input /out/pilot/input.csv --out_dir /out/pilot --artifacts light --score_mode external_scores --scores_input /out/pilot/scores.json --k_decoys 2 --workers 2 --timeout_s 60 --maxtasksperchild 100 --seed_strategy per_row --seed 0 --zip_pack"
           test -f /tmp/hetero2_out/pilot/evidence_pack.zip
