--- a/.github/workflows/publish_value_known_bad_good.yml
+++ b/.github/workflows/publish_value_known_bad_good.yml
@@ -34,6 +34,7 @@ jobs:
       asset_url_bad_constant: ${{ steps.meta.outputs.asset_url_bad_constant }}
       asset_url_bad_random: ${{ steps.meta.outputs.asset_url_bad_random }}
       asset_url_good_synthetic: ${{ steps.meta.outputs.asset_url_good_synthetic }}
+      separation_md: ${{ steps.separation.outputs.separation_md }}
 
     steps:
       - uses: actions/checkout@v4
@@ -206,6 +207,7 @@ jobs:
           
           total = len(rows)
           status_counts = Counter((str(r.get("status", "")).strip() or "UNKNOWN") for r in rows)
+          ok_rows = [r for r in rows if str(r.get("status", "")).strip() == "OK"]
           skip_reasons = Counter(
               (str(r.get("reason", "")).strip() or "UNKNOWN")
               for r in rows
@@ -224,27 +226,31 @@ jobs:
                   rows_with_decoys += 1
           share = (rows_with_decoys / total) if total else 0.0
           
+          if not ok_rows:
+              raise AssertionError("no OK rows available to compute median(slack) / pass_rate")
+          
           verdict_values = []
           slack_values = []
-          for r in rows:
+          for r in ok_rows:
               verdict = str(r.get("verdict", "")).strip()
               if not verdict:
-                  raise AssertionError("missing required column/value: verdict")
+                  raise AssertionError("missing required column/value on OK row: verdict")
               verdict_values.append(verdict)
               
               slack_raw = str(r.get("slack", "")).strip()
               if slack_raw == "":
-                  raise AssertionError("missing required column/value: slack")
+                  raise AssertionError("missing required column/value on OK row: slack")
               try:
                   slack_values.append(float(slack_raw))
               except ValueError:
-                  raise AssertionError(f"invalid slack value: {slack_raw!r}")
+                  raise AssertionError(f"invalid slack value on OK row: {slack_raw!r}")
           
-          pass_rate = sum(1 for v in verdict_values if v == "PASS") / len(verdict_values) if verdict_values else 0.0
-          median_slack = statistics.median(slack_values) if slack_values else 0.0
+          pass_rate = sum(1 for v in verdict_values if v == "PASS") / len(verdict_values)
+          median_slack = statistics.median(slack_values)
           
           lines = []
           lines.append(f"  - rows_total: {total}")
+          lines.append(f"  - rows_ok: {len(ok_rows)}")
           lines.append(
               "  - status_counts: "
               f"OK={status_counts.get('OK', 0)}, SKIP={status_counts.get('SKIP', 0)}, ERROR={status_counts.get('ERROR', 0)}"
@@ -286,6 +292,7 @@ jobs:
           
           total = len(rows)
           status_counts = Counter((str(r.get("status", "")).strip() or "UNKNOWN") for r in rows)
+          ok_rows = [r for r in rows if str(r.get("status", "")).strip() == "OK"]
           skip_reasons = Counter(
               (str(r.get("reason", "")).strip() or "UNKNOWN")
               for r in rows
@@ -304,27 +311,31 @@ jobs:
                   rows_with_decoys += 1
           share = (rows_with_decoys / total) if total else 0.0
           
+          if not ok_rows:
+              raise AssertionError("no OK rows available to compute median(slack) / pass_rate")
+          
           verdict_values = []
           slack_values = []
-          for r in rows:
+          for r in ok_rows:
               verdict = str(r.get("verdict", "")).strip()
               if not verdict:
-                  raise AssertionError("missing required column/value: verdict")
+                  raise AssertionError("missing required column/value on OK row: verdict")
               verdict_values.append(verdict)
               
               slack_raw = str(r.get("slack", "")).strip()
               if slack_raw == "":
-                  raise AssertionError("missing required column/value: slack")
+                  raise AssertionError("missing required column/value on OK row: slack")
               try:
                   slack_values.append(float(slack_raw))
               except ValueError:
-                  raise AssertionError(f"invalid slack value: {slack_raw!r}")
+                  raise AssertionError(f"invalid slack value on OK row: {slack_raw!r}")
           
-          pass_rate = sum(1 for v in verdict_values if v == "PASS") / len(verdict_values) if verdict_values else 0.0
-          median_slack = statistics.median(slack_values) if slack_values else 0.0
+          pass_rate = sum(1 for v in verdict_values if v == "PASS") / len(verdict_values)
+          median_slack = statistics.median(slack_values)
           
           lines = []
           lines.append(f"  - rows_total: {total}")
+          lines.append(f"  - rows_ok: {len(ok_rows)}")
           lines.append(
               "  - status_counts: "
               f"OK={status_counts.get('OK', 0)}, SKIP={status_counts.get('SKIP', 0)}, ERROR={status_counts.get('ERROR', 0)}"
@@ -366,6 +377,7 @@ jobs:
           
           total = len(rows)
           status_counts = Counter((str(r.get("status", "")).strip() or "UNKNOWN") for r in rows)
+          ok_rows = [r for r in rows if str(r.get("status", "")).strip() == "OK"]
           skip_reasons = Counter(
               (str(r.get("reason", "")).strip() or "UNKNOWN")
               for r in rows
@@ -384,27 +396,31 @@ jobs:
                   rows_with_decoys += 1
           share = (rows_with_decoys / total) if total else 0.0
           
+          if not ok_rows:
+              raise AssertionError("no OK rows available to compute median(slack) / pass_rate")
+          
           verdict_values = []
           slack_values = []
-          for r in rows:
+          for r in ok_rows:
               verdict = str(r.get("verdict", "")).strip()
               if not verdict:
-                  raise AssertionError("missing required column/value: verdict")
+                  raise AssertionError("missing required column/value on OK row: verdict")
               verdict_values.append(verdict)
               
               slack_raw = str(r.get("slack", "")).strip()
               if slack_raw == "":
-                  raise AssertionError("missing required column/value: slack")
+                  raise AssertionError("missing required column/value on OK row: slack")
               try:
                   slack_values.append(float(slack_raw))
               except ValueError:
-                  raise AssertionError(f"invalid slack value: {slack_raw!r}")
+                  raise AssertionError(f"invalid slack value on OK row: {slack_raw!r}")
           
-          pass_rate = sum(1 for v in verdict_values if v == "PASS") / len(verdict_values) if verdict_values else 0.0
-          median_slack = statistics.median(slack_values) if slack_values else 0.0
+          pass_rate = sum(1 for v in verdict_values if v == "PASS") / len(verdict_values)
+          median_slack = statistics.median(slack_values)
           
           lines = []
           lines.append(f"  - rows_total: {total}")
+          lines.append(f"  - rows_ok: {len(ok_rows)}")
           lines.append(
               "  - status_counts: "
               f"OK={status_counts.get('OK', 0)}, SKIP={status_counts.get('SKIP', 0)}, ERROR={status_counts.get('ERROR', 0)}"
@@ -428,6 +444,65 @@ jobs:
               with open(gh_out, "a", encoding="utf-8") as f:
                   f.write("facts_md<<EOF\n")
                   f.write(facts_md)
+                  f.write("EOF\n")
+          PY
+
+      - name: Compute separation facts (Δ vs BAD-constant; OK-only)
+        id: separation
+        run: |
+          python - << 'PY'
+          import csv
+          import os
+          import statistics
+          from pathlib import Path
+          
+          def read_ok_metrics(summary_csv: Path) -> tuple[float, float, int, int]:
+              rows = list(csv.DictReader(summary_csv.read_text(encoding="utf-8").splitlines()))
+              ok_rows = [r for r in rows if str(r.get("status", "")).strip() == "OK"]
+              if not ok_rows:
+                  raise AssertionError(f"no OK rows in {summary_csv}")
+              
+              slack_values = []
+              verdict_values = []
+              for r in ok_rows:
+                  slack_raw = str(r.get("slack", "")).strip()
+                  if slack_raw == "":
+                      raise AssertionError(f"missing slack on OK row in {summary_csv}")
+                  slack_values.append(float(slack_raw))
+                  
+                  verdict = str(r.get("verdict", "")).strip()
+                  if not verdict:
+                      raise AssertionError(f"missing verdict on OK row in {summary_csv}")
+                  verdict_values.append(verdict)
+              
+              median_slack = statistics.median(slack_values)
+              pass_rate = sum(1 for v in verdict_values if v == "PASS") / len(verdict_values)
+              return median_slack, pass_rate, len(ok_rows), len(rows)
+          
+          bad_med, bad_pass, bad_ok, bad_total = read_ok_metrics(Path("out_value_m2/BAD-constant/summary.csv"))
+          rnd_med, rnd_pass, rnd_ok, rnd_total = read_ok_metrics(Path("out_value_m2/BAD-random/summary.csv"))
+          good_med, good_pass, good_ok, good_total = read_ok_metrics(Path("out_value_m2/GOOD-synthetic/summary.csv"))
+          
+          lines = []
+          lines.append("separation facts (computed on status==OK rows only):")
+          lines.append(f"- BAD-constant: rows_ok={bad_ok}/{bad_total}, median_slack={bad_med:.6f}, pass_rate={bad_pass:.6f}")
+          lines.append(f"- BAD-random: rows_ok={rnd_ok}/{rnd_total}, median_slack={rnd_med:.6f}, pass_rate={rnd_pass:.6f}")
+          lines.append(f"- GOOD-synthetic: rows_ok={good_ok}/{good_total}, median_slack={good_med:.6f}, pass_rate={good_pass:.6f}")
+          lines.append("")
+          lines.append(f"- Δ_median_slack(GOOD - BAD-constant): {(good_med - bad_med):.6f}")
+          lines.append(f"- Δ_PASS_rate(GOOD - BAD-constant): {(good_pass - bad_pass):.6f}")
+          lines.append(f"- Δ_median_slack(GOOD - BAD-random): {(good_med - rnd_med):.6f}")
+          lines.append(f"- Δ_PASS_rate(GOOD - BAD-random): {(good_pass - rnd_pass):.6f}")
+          
+          separation_md = "\n".join(lines) + "\n"
+          Path("out_value_m2/separation_facts.md").write_text(separation_md, encoding="utf-8")
+          print(separation_md)
+          
+          gh_out = os.environ.get("GITHUB_OUTPUT")
+          if gh_out:
+              with open(gh_out, "a", encoding="utf-8") as f:
+                  f.write("separation_md<<EOF\n")
+                  f.write(separation_md)
                   f.write("EOF\n")
           PY
 
@@ -479,6 +554,9 @@ jobs:
           Facts (GOOD-synthetic):
           - SHA256: ${{ steps.hash_good_synthetic.outputs.sha256 }}
           ${{ steps.facts_good_synthetic.outputs.facts_md }}
+
+          Separation facts (OK-only; no auto-threshold gating):
+          ${{ steps.separation.outputs.separation_md }}
           EOF
 
       - name: Prepare meta (asset URLs, source SHA)
@@ -504,6 +582,7 @@ jobs:
             out_value_m2/facts_BAD-constant.md
             out_value_m2/facts_BAD-random.md
             out_value_m2/facts_GOOD-synthetic.md
+            out_value_m2/separation_facts.md
             release_notes.md
 
   publish-release:
@@ -635,8 +714,11 @@ jobs:
               python scripts/pilot_generate_input.py --out_dir out_value_m2/suite --rows 200 --k_decoys 20 --seed 0 --full_cover_count 3
               (scores variant) GOOD-synthetic: original=1.0, decoys=0.0
               hetero2-batch --input out_value_m2/suite/input.csv --out_dir out_value_m2/GOOD-synthetic --artifacts light --score_mode external_scores --scores_input out_value_m2/score_variants/scores_GOOD-synthetic.json --k_decoys 20 --workers 2 --timeout_s 60 --maxtasksperchild 100 --seed_strategy per_row --seed 0 --zip_pack
-            - Outcome (facts from summary.csv):
+          - Outcome (facts from summary.csv):
           ${{ needs.build-packs.outputs.good_synthetic_facts_md }}
+
+          - Separation facts (OK-only; no auto-threshold gating):
+          ${{ needs.build-packs.outputs.separation_md }}
           EOF
 
       - name: Create PR with registry update
@@ -651,4 +733,3 @@ jobs:
           base: "main"
           add-paths: |
             docs/artefacts_registry.md
-
