--- a/.github/workflows/publish_value_utility_proxy.yml
+++ b/.github/workflows/publish_value_utility_proxy.yml
@@ -303,16 +303,16 @@ jobs:
           lines.append(f"    - uplift_vs_random: {uplift_vs_random:.6f}")
           lines.append(f"    - uplift_vs_score_only: {uplift_vs_score:.6f}")
 
-          facts_md = \"\\n\".join(lines) + \"\\n\"
-          (out_dir / \"value_utility_proxy_facts.md\").write_text(facts_md, encoding=\"utf-8\")
+          facts_md = "\n".join(lines) + "\n"
+          (out_dir / "value_utility_proxy_facts.md").write_text(facts_md, encoding="utf-8")
           print(facts_md)
 
-          gh_out = os.environ.get(\"GITHUB_OUTPUT\")
+          gh_out = os.environ.get("GITHUB_OUTPUT")
           if gh_out:
-              with open(gh_out, \"a\", encoding=\"utf-8\") as f:
-                  f.write(\"facts_md<<EOF\\n\")
+              with open(gh_out, "a", encoding="utf-8") as f:
+                  f.write("facts_md<<EOF\n")
                   f.write(facts_md)
-                  f.write(\"EOF\\n\")
+                  f.write("EOF\n")
           PY
 
       - name: Compute SHA256
