--- a/.github/workflows/publish_value_utility_realtruth.yml
+++ b/.github/workflows/publish_value_utility_realtruth.yml
@@ -113,6 +113,8 @@ jobs:
           import csv
           import hashlib
           import os
+          import urllib.error
+          import urllib.parse
           import urllib.request
           from pathlib import Path
           
@@ -128,15 +130,49 @@ jobs:
           out_dir.mkdir(parents=True, exist_ok=True)
           dest = out_dir / "truth.csv"
           
+          parsed = urllib.parse.urlparse(url)
+          if parsed.scheme not in {"https"}:
+              raise SystemExit(f"truth_url must be https, got scheme={parsed.scheme!r}")
+          host = (parsed.hostname or "").strip().lower()
+          if not host:
+              raise SystemExit(f"truth_url has no hostname: {url!r}")
+
+          auth_allowlist = {"github.com", "raw.githubusercontent.com", "api.github.com"}
+          allow_auth_header = host in auth_allowlist
+
           headers = {"User-Agent": "publish-value-utility-realtruth"}
           token = (os.environ.get("GITHUB_TOKEN") or "").strip()
-          if token:
+          if token and allow_auth_header:
               headers["Authorization"] = f"token {token}"
               headers["Accept"] = "application/octet-stream"
-          
+              print(f"Auth header enabled for truth_url host: {host}")
+          elif token and not allow_auth_header:
+              print(f"WARNING: truth_url host not allowed for auth header: {host}; downloading without Authorization")
+
+          class SafeRedirectHandler(urllib.request.HTTPRedirectHandler):
+              def redirect_request(self, req, fp, code, msg, hdrs, newurl):
+                  new_req = super().redirect_request(req, fp, code, msg, hdrs, newurl)
+                  if new_req is None:
+                      return None
+                  new_host = (urllib.parse.urlparse(new_req.full_url).hostname or "").strip().lower()
+                  if "Authorization" in getattr(new_req, "headers", {}) and new_host not in auth_allowlist:
+                      new_req.headers.pop("Authorization", None)
+                  if hasattr(new_req, "unredirected_hdrs") and "Authorization" in new_req.unredirected_hdrs and new_host not in auth_allowlist:
+                      new_req.unredirected_hdrs.pop("Authorization", None)
+                  return new_req
+
+          opener = urllib.request.build_opener(SafeRedirectHandler())
           req = urllib.request.Request(url, headers=headers)
-          with urllib.request.urlopen(req) as resp:
-              data = resp.read()
+          try:
+              with opener.open(req, timeout=60) as resp:
+                  data = resp.read()
+          except urllib.error.HTTPError as e:
+              if not allow_auth_header and e.code in {401, 403, 404}:
+                  raise SystemExit(
+                      f"Download failed for truth_url host {host!r} without Authorization (HTTP {e.code}). "
+                      f"Auth header is forbidden for this host; provide a public URL or GitHub-hosted asset."
+                  ) from e
+              raise
           
           dest.write_bytes(data)
           actual = hashlib.sha256(data).hexdigest()
